# threedeestuff

./: CMakeLists.txt  README.md
include/: chunk_mesh.hpp  input_handler.hpp  rendering.hpp  voxel.hpp  world.hpp
resources/: atlas_256x.pdn  atlas_64x.pdn
resources/shaders/: chunk_fragment.glsl  chunk_fragment.glsl.old  chunk_vertex.glsl
src/: chunk_mesh.cpp  input_handler.cpp  main.cpp  rendering.cpp  voxel.cpp  world.cpp
